client/src/components/home/Home.css
.home {
  margin-top: 3px;
}

input, select, textarea {
  color: #9e9e9e;
}

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #616161;
  opacity: 1; /* Firefox */
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: #616161;
}

::-ms-input-placeholder { /* Microsoft Edge */
  color: #616161;
}

.submit-btn {
  width: 100%;
}

.shorten-title {
  margin-top: 20px;
}

.formError {
  color: red;
}

.loader {
  margin-top: 20px;
  text-align: center;
  padding: 0 14px;
}

.shorten-imp {
  margin-top: 20px;
}

.shorten-error {
  margin-top: 20px;
  color: red;
}

.tabs .tab a{
  color:#000;
} /*Black color to the text*/

.tabs .tab a:hover a:focus {
  background-color:#888 !important;
  color:#000;
} /*Text color on hover*/

.tabs .tab a.active {
  background-color:#616161 !important;
  color:#000 !important;
} /*Background and text color when a tab is active*/

.tabs .indicator {
  background-color:#26A69A;
} /*Color of underline*/

table {
  width: 100%;
}

td {
  padding: 5px 5px;

  /* Handle word-breaks for long names and urls */
  overflow-wrap: break-word;
  word-wrap: break-word;
  -ms-word-break: break-all;
  word-break: break-all;
  word-break: break-word;
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

